tests/glusterfs.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: gluster1
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: gluster-heketi

---
kind: Pod
apiVersion: v1
metadata:
  name: test
spec:
  containers:
    - name: test
      image: nginx:alpine
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: gluster-dev-volume
  volumes:
    - name: gluster-dev-volume
      persistentVolumeClaim:
        claimName: gluster1
