tests/ingress.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: test-ingress
  labels:
    app: test
spec:
  containers:
    - name: test
      image: nginx:alpine
      ports:
        - name: http
          containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: test-ingress
spec:
  selector:
    app: test
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: test.vik8s.io
      http:
        paths:
          - backend:
              serviceName: test-ingress
              servicePort: http
